fix home journal thumbnails on mobile (100% width)

--- a/wp-content/themes/goodthings/assets/less/app.less
+++ b/wp-content/themes/goodthings/assets/less/app.less
@@ -833,7 +833,7 @@ figure.alignnone { margin-left: 0; margin-right: 0; }
    .comment-count {display: block; margin-left: 0;}
    .home-journal-post {margin-bottom: 50px;}
    .home-journal-thumbnail {width: 100%;}
-   .home-journal-thumbnail img-circle {width: 100%; height: auto !important; margin-bottom: 10px;}
+   .home-journal-thumbnail img {width: 100% !important; height: auto !important; margin-bottom: 10px;}
    .journal-thumbnail {width:100%;}
    .main img {width: 100%; height: auto !important; margin: 10px 0 10px 0; padding: 0;}
    .btn-group {padding-bottom:5px !important;}
